--- a/data/themes/my_theme.toml
+++ b/data/themes/my_theme.toml
@@ -1,18 +1,18 @@
 # Theme metadata
-name = "My_theme"
+name = "My Theme"
 
 # Is theme light or dark?
-light = false
+light = true
 
 # Primary
-primary = "#2962ff"
+primary = "#1a3a7c"
 
 # Menu
-menu_primary = "#fff"
-menu_text = "#34495e"
-menu_text_active = "#2962ff"
-menu_title = "#2b2b2b"
+menu_primary = "#1a3a7c" # 500
+menu_text = "#fff"
+menu_text_active = "#8c9eff" # A100
+menu_title = "#fff"
 
 # Home sections
-home_section_odd = "rgb(255, 255, 255)"
-home_section_even = "rgb(247, 247, 247)"
+home_section_odd = "rgb(240, 244, 249)"
+home_section_even = "rgb(248, 249, 254)"
